nebula-logger/main/log-management/objects/LogEntryTopicAssignment__mdt/LogEntryTopicAssignment__mdt.object-meta.xml
<CustomObject>
    <label>Log Entry Topic Assignment</label>
    <pluralLabel>Log Entry Topic Assignments</pluralLabel>
</CustomObject>