nebula-logger/main/log-management/objects/LogEntryTopicAssignment__mdt/fields/FieldOperation__c.field-meta.xml
<CustomField>
    <fullName>FieldOperation__c</fullName>
    <label>Field Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>EQUALS</fullName>
            </value>
            <value>
                <fullName>STARTS_WITH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>