nebula-logger/main/log-management/objects/LogEntryTopicAssignment__mdt/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <label>Field Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>