nebula-logger/main/log-management/objects/LogEntryTopicAssignment__mdt/fields/LoggerField__c.field-meta.xml
<CustomField>
    <fullName>LoggerField__c</fullName>
    <label>Logger Field</label>
    <metadataRelationshipControllingField>LogEntryTopicAssignment__mdt.LoggerObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>LogEntryTopic</relationshipLabel>
    <relationshipName>LogEntryTopic</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>