nebula-logger/main/log-management/objects/LogEntryTopicAssignment__mdt/fields/LoggerObject__c.field-meta.xml
<CustomField>
    <fullName>LoggerObject__c</fullName>
    <label>Logger Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>LogEntryTopic</relationshipLabel>
    <relationshipName>LogEntryTopic</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>