nebula-logger/main/log-management/objects/LogEntryTopicAssignment__mdt/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <description>1 or more Topics to assign - each Topic should be listed on a separate line.</description>
    <inlineHelpText>1 or more Topics to assign - each Topic should be listed on a separate line.</inlineHelpText>
    <label>Topic(s) to Assign</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>