nebula-logger/main/log-management/objects/LogEntryTopicAssignment__mdt/validationRules/Selected_Object_Not_Supported.validationRule-meta.xml
<ValidationRule>
    <fullName>Selected_Object_Not_Supported</fullName>
    <active>true</active>
    <description>Only LogEntry__c object is currently supported</description>
    <errorConditionFormula>LoggerObject__r.DeveloperName != &apos;LogEntry&apos;</errorConditionFormula>
    <errorDisplayField>LoggerObject__c</errorDisplayField>
    <errorMessage>Only LogEntry__c object is currently supported</errorMessage>
</ValidationRule>