nebula-logger/main/log-management/objects/LogEntryTopicAssignment__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsActive__c</columns>
    <columns>LoggerObject__c</columns>
    <columns>LoggerField__c</columns>
    <columns>FieldOperation__c</columns>
    <columns>FieldValue__c</columns>
    <columns>Topics__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>